@@ -246,7 +246,7 @@ var lmsQueue = Vue.component("lms-queue", {
    <v-list-tile avatar v-bind:class="{'pq-current': index==currentIndex}" @dragstart="dragStart(index, $event)" @dragend="dragEnd()" @dragover="dragOver($event)" @drop="drop(index, $event)" draggable @click="click(item, index, $event)" slot-scope="{item, index}" key-field="key">
     <v-list-tile-avatar :tile="true" v-bind:class="{'radio-image': 0==item.duration}" class="lms-avatar">
      <v-icon v-if="item.selected">check_box</v-icon>
-     <img v-else :key="item.image" :src="item.image"></img>
+     <img v-else :key="item.image" :src="item.image" onerror="this.src='html/images/radio.png'"></img>
     </v-list-tile-avatar>
     <v-list-tile-content>
      <v-list-tile-title v-html="item.title"></v-list-tile-title>
@@ -264,7 +264,7 @@ var lmsQueue = Vue.component("lms-queue", {
    <v-list-tile avatar v-bind:class="{'pq-current': index==currentIndex}" @dragstart="dragStart(index, $event)" @dragend="dragEnd()" @dragover="dragOver($event)" @drop="drop(index, $event)" draggable @click="click(item, index, $event)" slot-scope="{item, index}" key-field="key">
     <v-list-tile-avatar :tile="true" v-bind:class="{'radio-image': 0==item.duration}" class="lms-avatar">
      <v-icon v-if="item.selected">check_box</v-icon>
-     <img v-else :key="item.image" :src="item.image"></img>
+     <img v-else :key="item.image" :src="item.image" onerror="this.src='html/images/radio.png'"></img>
     </v-list-tile-avatar>
     <v-list-tile-content>
      <v-list-tile-title v-html="item.title"></v-list-tile-title>
@@ -281,7 +281,7 @@ var lmsQueue = Vue.component("lms-queue", {
    <v-list-tile :key="item.key" avatar v-bind:class="{'pq-current': index==currentIndex}" :id="'track'+index" @dragstart="dragStart(index, $event)" @dragend="dragEnd()" @dragover="dragOver($event)" @drop="drop(index, $event)" draggable @click="click(item, index, $event)" class="lms-list-item">
     <v-list-tile-avatar :tile="true" v-bind:class="{'radio-image': 0==item.duration}" class="lms-avatar">
      <v-icon v-if="item.selected">check_box</v-icon>
-     <img v-else :key="item.image" v-lazy="item.image"></img>
+     <img v-else :key="item.image" v-lazy="item.image" onerror="this.src='html/images/radio.png'"></img>
     </v-list-tile-avatar>
     <v-list-tile-content>
      <v-list-tile-title v-html="item.title"></v-list-tile-title>
